--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="776cc1">  <td>18/04/01 14:50:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.first()[pri:0, instance:samples.SampleTest@1ddf84b8]">first</td> 
-  <td>main@854587510</td>   <td></td> </tr>
-<tr bgcolor="776cc1">  <td>18/04/01 14:50:15</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.second()[pri:0, instance:samples.SampleTest@1ddf84b8]">second</td> 
-  <td>main@854587510</td>   <td></td> </tr>
+<tr bgcolor="7ed76f">  <td>18/04/01 15:59:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.first()[pri:0, instance:samples.SampleTest@5e82df6a]">first</td> 
+  <td>TestNG-tests-1@373781939</td>   <td></td> </tr>
+<tr bgcolor="7ed76f">  <td>18/04/01 15:59:28</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.second()[pri:0, instance:samples.SampleTest@5e82df6a]">second</td> 
+  <td>TestNG-tests-1@373781939</td>   <td></td> </tr>
 </table>
